# rust-coreutils

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: echo.rs  main.rs
