[package]
name = "rust-coreutils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"

[dev-dependencies]
assert_cmd = "2.0.12"
